--- a/QUARTO_jatek/Properties/Resources.resx
+++ b/QUARTO_jatek/Properties/Resources.resx
@@ -118,14 +118,38 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Kicsi_Fekete_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kicsi_Fekete_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Kicsi_Fekete_Teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kicsi_Fekete_Teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nagy_Piros_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nagy_Piros_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nagy_Piros_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nagy_Piros_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nagy_Fekete_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nagy_Fekete_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nagy_Piros_teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nagy_Piros_teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Kicsi_Piros_Teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kicsi_Piros_Teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nagy_Fekete_Teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nagy_Fekete_Teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nagy_Fekete_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nagy_Fekete_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Kicsi_Piros_Lyukas_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kicsi_Piros_Lyukas_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nagy_Fekete_Lyukas_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nagy_Fekete_Lyukas_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Kicsi_Fekete_Lyukas_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Kicsi_Fekete_Lyukas_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Kicsi_Fekete_Teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kicsi_Fekete_Teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Kicsi_Fekete_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Kicsi_Fekete_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,37 +157,16 @@
   <data name="Kicsi_Piros_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Kicsi_Piros_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Kicsi_Piros_Lyukas_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kicsi_Piros_Lyukas_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Kicsi_Piros_Teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kicsi_Piros_Teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Kicsi_Piros_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kicsi_Piros_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nagy_Fekete_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nagy_Fekete_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nagy_Fekete_Lyukas_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nagy_Fekete_Lyukas_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nagy_Fekete_Teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nagy_Fekete_Teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nagy_Fekete_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nagy_Fekete_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nagy_Piros_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nagy_Piros_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Kicsi_Fekete_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kicsi_Fekete_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Nagy_Piros_Lyukas_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Nagy_Piros_Lyukas_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Nagy_Piros_teli_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nagy_Piros_teli_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Kicsi_Piros_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kicsi_Piros_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Nagy_Piros_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nagy_Piros_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SzuperTábla" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SzuperTábla.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
