--- a/QUARTO_jatek/Properties/Resources.resx
+++ b/QUARTO_jatek/Properties/Resources.resx
@@ -163,10 +163,13 @@
   <data name="Nagy_Piros_Lyukas_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Nagy_Piros_Lyukas_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SzuperTábla" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SzuperTábla.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Kicsi_Piros_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Kicsi_Piros_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SzuperTábla" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="SzuperTábla1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SzuperTábla.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
