--- a/clean_QUARTO/Jatek.resx
+++ b/clean_QUARTO/Jatek.resx
@@ -123,4 +123,7 @@
   <metadata name="ListaTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>104, 17</value>
   </metadata>
+  <metadata name="Megjelenit.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>206, 12</value>
+  </metadata>
 </root>
