--- a/clean_QUARTO/Properties/Resources.resx
+++ b/clean_QUARTO/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="Kicsi_Piros_Teli_Négyzet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Kicsi_Piros_Teli_Négyzet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Nagy_Fekete_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Nagy_Fekete_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
