--- a/clean_QUARTO/Properties/Resources.resx
+++ b/clean_QUARTO/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="hatter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hatter.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ikon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ikon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Kicsi_Fekete_Lyukas_Kör" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Kicsi_Fekete_Lyukas_Kör.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
